--- a/index.html
+++ b/index.html
@@ -1,1 +1,158 @@
-Hello World
+<!DOCTYPE html>
+<html class="no-js" lang="en">
+<html>
+    <head>
+        <title>Stephany Salguero | 30 Days of Code Portfolio</title>
+        <meta name="description" content="Stephany Salguero is a Full Stack Developer and Graphic Designer from Queens, NYC. This is her portfolio only contains full stack web projects.">
+        <meta name="keywords" content="sadgirlnyc, stephany salguero, stephany, salguero, sadgirl">
+        <meta charset="utf-8">
+        <meta name="author" content="Stephany Salguero">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1" />
+        <!-- favicon -->
+        <link rel="shortcut icon" href="public/favicon.ico">
+        <!-- css -->
+        <link rel="stylesheet" href="css/main.css" />
+        <!-- jQuery -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <!-- js -->
+        <script src="js/app.js"></script>
+        <!-- font -->
+        <link href="https://fonts.googleapis.com/css?family=Concert+One" rel="stylesheet">
+    </head>
+    <body>
+      <!-- navigation -->
+              <div class="nav-wrapper home">
+                <div class="nav">
+                    <ul class="nav-inner">
+                      <li><a href="/Users/Steph/Sites/sadgirlnyc.github.io/code.html">COde</a></li>
+                      <li><a href="/blog">Blog</a></li>
+                      <li><a onclick="scrollToDiv('about');">About</a></li>
+                      <li><a onclick="scrollToDiv('experience');">Experience</a></li>
+                      <li><a onclick="scrollToDiv('sideprojects');">Side Projects</a></li>
+                      <li><a onclick="scrollToDiv('contact');">Contact</a></li>
+                     </ul>
+                  </div>
+                </div>
+      <!--end of navigation -->
+  <!-- parallax section -->
+<div class="intro-wrapper">
+  <div class="intro-container intro">
+    <div class="intro-logo">
+      <a href="/">
+        <img src="public/sadgirlheader.jpg">
+      </a>
+    </div>
+  </div>
+</div>
+  <!-- end of parallax section -->
+
+  <!--rules section-->
+  <h1>Hello Sick Sad World</h1>
+    <h3>Welcome to Sadgirlnyc's 30 Websites in 30 Days!</h3>
+    <div class="intro-container rules">
+      <div class="intro-inner">
+        <br>
+        <h2>RULES</h2>
+        <ol>
+          <li>I will do 30 small coding projects ranging in different JS frameworks, etc.</li>
+          <li>I will create a different website for every day this month.</li>
+          <li>I will fight my designer urge to make things perfectly and I will not be afraid of making mistakes.</li>
+          <li>I will ask for help when I need it.</li>
+        </ol>
+        <br>
+      </div>
+    </div>
+  <!--end of rules section-->
+
+  <!-- about section-->
+  <div class="intro-container about">
+    <div class="intro-inner">
+          <br>
+          <h2>ABOUT</h2>
+          <p>
+            I'm a self-taught front end developer who enjoys building user experiences with HTML, CSS, and JavaScript. I care deeply about learning and although I'm a late bloomer when it comes to coding, I reached my first goal in 2017 when I began my front-end career at Spotible, where I coded, designed, modified, and debugged hundreds of custom, cross-browser, responsive ads for highly trafficked websites including but not limited to NYT, The Atlantic, TMZ and National Geographic.
+          </p>
+          <p>
+            I am very proud of my progress and work but like any newb, you can always stand to learn more and faster! My newest goal is to become a Full Stack Developer in 2018! TBH, I am not comfortable with languages that go beyond the front-end ones and so I decided to start this 30 day coding challenge on github so that I can put to use everything I know so far while learning and applying new programming concepts, unfamiliar languages, trendy frameworks, cool APIs to build new and eventually more complicated projects that will reign in simplicity in the lives of others.
+          </p>
+          <p>
+             I'm happiest when I am creating and collaborating with diverse teams of developers, designers, musicians, film-makers, visionaries and product owners to build products and fulfill purposeful visions. My biggest fear up until 2 years ago was being creative. If you were to ask me now what my biggest fear is, I'd say not creating lol. How quickly things change!
+          </p>
+          <p>
+            Currently helping to craft a better media experience at WeAreTokr.
+          </p>
+        <br>
+    </div>
+  </div>
+  <!--end of about section-->
+
+  <!--experience section-->
+  <div class="intro-container experience">
+    <div class="intro-inner">
+      <!--<div class="timeline">-->
+      <br>
+      <h2>EXPERIENCE</h2>
+          <ul>
+          <li>WeAreTokr</li>
+            <ul>Jun 2015 - Present: Front End Developer | Chief-in-Design</ul>
+          <li>Spotible</li>
+            <ul>Mar 2017 - Nov 2017: Creative Service Engineer | Front End Developer </ul>
+          <li>Book of the Month</li>
+            <ul>Feb 2016 - Jun 2016: QA Engineer | Operations Specialist</ul>
+        </ul>
+      <br>
+    </div>
+  </div>
+  <!--end of experience section-->
+
+  <!--side projects section-->
+  <div class="intro-container sideprojects last">
+    <div class="intro-inner">
+      <br>
+      <h2>SIDE PROJECTS</h2>
+        <h3>WeAreTokr</h3>
+          <a href="https://www.tokr.co">
+            <div class="tokr-project">
+            </div>
+            </a>
+              <p>
+        Cannabis Lifestyle Social App [Environment: Angular.JS | Ionic]
+              </p>
+          <h1>Goodbye Sick Sad World</h1>
+          <p>First attempt at github pages!</p>
+      <br>
+    </div>
+  </div>
+  <!--end of side projects section-->
+
+  <!-- footer section-->
+  <div class="footer contact">
+    <div class="intro-inner">
+      <div class="center">
+        <div class="social-icons">
+          <a href="https://www.github.com/sadgirlnyc">
+            <div class="social-icon github">
+            </div>
+          </a>
+          <a href="https://www.linkedin.com/in/stephany-salguero-916893a6/">
+            <div class="social-icon linkedin">
+            </div>
+          </a>
+        </div>
+      </div>
+      <p class="center">
+        Stephany Salguero 2018 | Full-Stack Web Developer
+        <br>
+        <a href="mailto:sadgirlnyc@gmail.com">sadgirlnyc@gmail.com</a>
+      </p>
+      <div class="toppage">
+        <a onclick="scrollToDiv('home');">
+          <div class="toppage-icon arrow">
+          </div>
+      </a>
+      </div>
+    </div>
+  </div>
+  <!-- end of footer-->
+</body>
+</html>
