--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <div class="nav-wrapper home">
                 <div class="nav">
                     <ul class="nav-inner">
-                      <li><a href="/Users/Steph/Sites/sadgirlnyc.github.io/code.html">COde</a></li>
+                      <li><a href="https://www.sadgirlnyc.github.io/code.html">COde</a></li>
                       <li><a href="/blog">Blog</a></li>
                       <li><a onclick="scrollToDiv('about');">About</a></li>
                       <li><a onclick="scrollToDiv('experience');">Experience</a></li>
@@ -33,7 +33,6 @@
                      </ul>
                   </div>
                 </div>
-      <!--end of navigation -->
   <!-- parallax section -->
 <div class="intro-wrapper">
   <div class="intro-container intro">
