--- a/code.html
+++ b/code.html
@@ -22,7 +22,7 @@
               <div class="nav-wrapper home">
                 <div class="nav">
                     <ul class="nav-inner">
-                      <li><a href="/Users/Steph/Sites/sadgirlnyc.github.io/index.html">Home</a></li>
+                      <li><a href="https://www.sadgirlnyc.github.io/index.html">Home</a></li>
                       <li><a href="/blog">Blog</a></li>
                       <li><a href="mailto:sadgirlnyc@gmail.com">Contact</a></li>
                      </ul>
