--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <div class="nav-wrapper home">
                 <div class="nav">
                     <ul class="nav-inner">
-                      <li><a href="https://www.sadgirlnyc.github.io/code.html">COde</a></li>
+                      <li><a href="/code.html">COde</a></li>
                       <li><a href="/blog">Blog</a></li>
                       <li><a onclick="scrollToDiv('about');">About</a></li>
                       <li><a onclick="scrollToDiv('experience');">Experience</a></li>
