added design link to nav bar

--- a/code.html
+++ b/code.html
@@ -49,6 +49,7 @@
     <div class="intro-container project">
       <br>
       <div>Day 1 <span><a href="/#">Random 80's Lyric Generator</a></span></div>
+      <div>Day 2 <span><a href="/#">Hex Color Clock</a></span></div>
       <br>
     </div>
 </div>
