--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="nav">
                     <ul class="nav-inner">
                       <li><a href="/code.html">COde</a></li>
-                      <li><a href="/blog">Blog</a></li>
+                      <li><a href="https://escalusblack.myportfolio.com/">Design</a></li>
                       <li><a onclick="scrollToDiv('about');">About</a></li>
                       <li><a onclick="scrollToDiv('experience');">Experience</a></li>
                       <li><a onclick="scrollToDiv('sideprojects');">Side Projects</a></li>
@@ -33,6 +33,8 @@
                      </ul>
                   </div>
                 </div>
+  <!-- end of navigation -->
+
   <!-- parallax section -->
 <div class="intro-wrapper">
   <div class="intro-container intro">
