Uploading Completed Projects

--- a/30-projects/giphy-api-jquery_05/index.html
+++ b/30-projects/giphy-api-jquery_05/index.html
@@ -20,7 +20,7 @@
     <form id="form">
       <input type="text" id="addItem" placeholder="Search for gifz...">
     </form>
-        <button class="btn btn-danger btn-lg btn-block" id="submit">
+        <button class="btn btn-danger btn-lg btn-block" id="submit_btn" class="button">
           <strong>SEARCH</strong>
         </button>
         <br>
