--- a/code.html
+++ b/code.html
@@ -23,7 +23,6 @@
                 <div class="nav">
                     <ul class="nav-inner">
                       <li><a href="/index.html">Home</a></li>
-                      <li><a href="/blog">Blog</a></li>
                       <li><a href="mailto:sadgirlnyc@gmail.com">Contact</a></li>
                      </ul>
                   </div>
@@ -48,8 +47,11 @@
   <div class="info-wrapper">
     <div class="intro-container project">
       <br>
-      <div>Day 1 <span><a href="/#">Random 80's Lyric Generator</a></span></div>
+      <div>Day 5 <span><a href="/#">IMDB Search</a></span></div>
+      <div>Day 4 <span><a href="/#">Bad Day Giphy Generator</a></span></div>
+      <div>Day 3 <span><a href="/#">Giphy Search Generator</a></span></div>
       <div>Day 2 <span><a href="/#">Hex Color Clock</a></span></div>
+      <div>Day 1 <span><a href="/#">Random 80's Lyric Generator</a></span></div>
       <br>
     </div>
 </div>
