Added project links in Code page

--- a/code.html
+++ b/code.html
@@ -47,11 +47,11 @@
   <div class="info-wrapper">
     <div class="intro-container project">
       <br>
-      <div>Day 5 <span><a href="/#">IMDB Search</a></span></div>
-      <div>Day 4 <span><a href="/#">Bad Day Giphy Generator</a></span></div>
-      <div>Day 3 <span><a href="/#">Giphy Search Generator</a></span></div>
-      <div>Day 2 <span><a href="/#">Hex Color Clock</a></span></div>
-      <div>Day 1 <span><a href="/#">Random 80's Lyric Generator</a></span></div>
+      <div>Day 5 <span><a href="https://sadgirlnyc.github.io/30-projects/imdb_api_search/imdb.html">IMDB Search</a></span></div>
+      <div>Day 4 <span><a href="https://sadgirlnyc.github.io/30-projects/bad_day_giphy/index.html">Bad Day Giphy Generator</a></span></div>
+      <div>Day 3 <span><a href="https://sadgirlnyc.github.io/30-projects/giphy_api_search/giphy.html">Giphy Search Generator</a></span></div>
+      <div>Day 2 <span><a href="https://sadgirlnyc.github.io/30-projects/hex_clock/clock.html">Hex Color Clock</a></span></div>
+      <div>Day 1 <span><a href="https://sadgirlnyc.github.io/30-projects/random_80_lyrics/random80slyrics.html">Random 80's Lyric Generator</a></span></div>
       <br>
     </div>
 </div>
