Added Responsive Tweaks to projects

--- a/30-projects/imdb_api_search/imdb.html
+++ b/30-projects/imdb_api_search/imdb.html
@@ -26,7 +26,9 @@
               <ul id="movies" data-role="listview"></ul>
             </div>
             <div data-role="footer" style="text-align:center" data-theme="b">
-              <p>MMDB &copy; 2017</p>
+              <p>MMDB &copy; 2017 | Made with <3 by <a href=" mailto:sadgirlnyc@gmail.com">Sadgirl Codes NYC</a> 2018 |
+                <a href="https://sadgirlnyc.github.io/code.html">Code</a> | <a href="https://sadgirlnyc.github.io/index.html">Home</a>
+              </p>
             </div>
           </div>
         <!-- end of Header -->
