--- a/30-projects/random_80_lyrics/random80slyrics.html
+++ b/30-projects/random_80_lyrics/random80slyrics.html
@@ -13,6 +13,7 @@
         <script src="js/app.js"></script>
         <!-- font -->
         <link href="https://fonts.googleapis.com/css?family=Rubik|Rubik+Mono+One" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     </head>
     <body>
       <!-- header -->
